--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ img- {
   padding: 0;
 }
 .container {
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   margin-left: auto;
   margin-right: auto;
   width: 1128px;
