--- a/css/style.css
+++ b/css/style.css
@@ -429,3 +429,7 @@ img- {
 .studio-footer {
   color: var(--logo-color-free);
 }
+
+.shadow {
+  filter: drop-shadow(0px 2px 1px rgba(46, 47, 66, 0.08));
+}
