--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,19 @@ img- {
   margin: 0;
   padding: 0;
 }
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1128px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1158px;
 }
 
 .page-header {
@@ -128,7 +137,6 @@ img- {
 }
 
 .auth-nav {
-  display: flex;
   margin-left: auto;
   letter-spacing: 0.2em;
   text-align: left;
@@ -136,7 +144,7 @@ img- {
 
 .auth-nav .link {
   display: block;
-  margin-left: 40px;
+
   padding-top: 24px;
   padding-bottom: 24px;
   color: var(--accent-font-one);
@@ -156,9 +164,13 @@ img- {
   color: var(--accent-font-two);
 }
 
+.myitem {
+  margin-left: 40px;
+}
+
 /* Hero */
 .hero {
-  height: 300px;
+  padding: 192px 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -169,6 +181,8 @@ img- {
 }
 
 .hero h1 {
+  margin-bottom: 48px;
+  width: 497px;
   background-color: var(--hero-background);
   color: var(--h1-color);
   font-weight: 700;
@@ -208,8 +222,8 @@ img- {
 }
 
 .section.portfolio {
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 96px;
+  padding-bottom: 120px;
 }
 
 .section.portfolio h3 {
@@ -281,30 +295,30 @@ img- {
   margin-right: 0px;
 }
 
+.result:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
 .result {
   width: 359px;
   margin-right: 24px;
   margin-bottom: 48px;
-  border-bottom: 2px solid var(--result-background);
 }
 
-.result h3 {
-  padding-top: 32px;
-  padding-left: 16px;
-}
-
-.result p {
-  padding-top: 8px;
-  padding-left: 16px;
-  padding-bottom: 32px;
+.border {
+  border-left: 1px solid rgba(46, 47, 66, 0.08);
+  border-right: 1px solid rgba(46, 47, 66, 0.08);
+  border-bottom: 1px solid rgba(46, 47, 66, 0.08);
+  padding: 32px 16px;
 }
 
 .filter-btn {
   justify-content: center;
-  padding-top: 96px;
-  padding-bottom: 72px;
+  padding-top: 0px;
+  margin-bottom: 72px;
+  margin-right: auto;
+  margin-left: auto;
   text-align: center;
-  margin: auto;
   width: 586px;
 }
 
@@ -331,10 +345,6 @@ img- {
 .btn-portfolio:active {
   background-color: var(--btn-portfol-active);
   color: var(--btn-portfol-active-text);
-}
-
-.portfolio {
-  padding-top: 0px;
 }
 
 .example {
@@ -370,6 +380,7 @@ img- {
 
 .employee {
   width: 264px;
+  padding-bottom: 32px;
   display: inline-block;
   background: #ffffff;
   text-align: center;
@@ -380,10 +391,6 @@ img- {
 }
 
 .emp-photo {
-  margin-bottom: 32px;
-}
-
-.employee p {
   margin-bottom: 32px;
 }
 
